...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.gms.maps.MapView
            android:id="@+id/map_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_view_marker_center"
            android:layout_width="wrap_content"
...
                        android:id="@+id/image_view_from"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        app:layout_constraintDimensionRatio="W,1:1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="@id/text_view_from_info"
                        android:src="@drawable/ic_from"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/text_view_from_info"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
...
                        android:textAppearance="@style/TextSemibold"
                        android:textSize="14sp"
                        android:textColor="@color/purpley"
                        android:text="@string/from"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/text_view_from"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/text_view_from_info"
                        app:layout_constraintStart_toStartOf="@id/text_view_from_info"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="1dp"
...
                        android:id="@+id/image_view_to"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        app:layout_constraintDimensionRatio="W,1:1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="@id/text_view_to_info"
                        android:src="@drawable/ic_to"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/text_view_to_info"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
...
                        android:textAppearance="@style/TextSemibold"
                        android:textSize="14sp"
                        android:textColor="@color/marigold"
                        android:text="@string/to"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/text_view_to"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/text_view_to_info"
                        app:layout_constraintStart_toStartOf="@id/text_view_to_info"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="1dp"
...
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_submit"
            style="@style/PrimaryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="24dp"
            android:layout_marginStart="20dp"
...
