...
                    tools:listitem="@layout/home_notification_view_holder_item" />

                <!-- IMPORTANT: It has to be inside motion layouts. MotionLayout can't expand below
                     if there is any view below it.
                 -->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_dashboard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="15dp"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
...
                    </androidx.constraintlayout.widget.ConstraintLayout>


                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_view_rent_a_car"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:background="@color/colorWhite"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp"
...
